--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 #block {
   width: 50px;
   height: 50px;
-  background: blue;
+  background-color: red;
   position: absolute;
   top: 10px;
   left: 10px;
